# patchmatch

./: .gitignore  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
datasets/: __innit__.py  data_loader.py
models/: __innit__.py  patchmatch_siamese_descriptor.py
modules/: __innit__.py  generate_patches.py
notebooks/: Comparison Notebook.ipynb  Dataset Visualization.ipynb  Generate Plots.ipynb
patchmatch/: __init__.py
patchmatch/datasets/: __init__.py  data_loader.py
patchmatch/models/: __init__.py  patchmatch_siamese_descriptor.py  patchmatch_triplet_descriptor.py
patchmatch/modules/: __init__.py  generate_patches.py
scripts/: export_to_onnx.py  generate_datasets.py  plot_training_metrics.py  train_model.py
utils/: utils.py
